<resources>
    <string name="app_name">智慧家校</string>
    <dimen name="delete">60dp</dimen>
    <string name="login">老 师 的 好 工 具!</string>
    <string name="editphone">请输入您的手机号</string>
    <string name="editauth">请输入您的验证码</string>
    <string name="getauth">获取验证码</string>
    <string name="editpwd">请输入您的密码</string>
    <string name="forgitpwd">忘记密码</string>
    <string name="immregister">立即注册</string>
    <string name="Login">登录</string>
    <string name="registerselete">选择身份即表示同意注册协议</string>
    <string name="registerplaceselete">请选择您的身份</string>
    <string name="teacher">老师</string>
    <string name="teacher1">教师</string>
    <string name="patriarch">家长</string>
    <string name="register">注册</string>
    <string name="banji">一年级八班</string>
    <string name="class_titlecreate">我创建的班级</string>
    <string name="class_titleadd">我加入的班级</string>
    <string name="class_entry">什么也没有，快去添加吧</string>
    <string name="createclass">创建班级</string>
    <string name="classnumber">班级号:</string>
    <string name="classmember">班级成员:</string>
    <string name="classmember1">班级成员</string>
    <string name="classfile">\t班级文件</string>
    <string name="classfiles">班级文件</string>
    <string name="classmess">\t班级消息</string>
    <string name="sendnotification">班级通知</string>
    <string name="discussion">学生作业</string>
    <string name="survey">家长作业</string>
    <string name="activity">习惯养成</string>
    <string name="classdesc">智慧成长</string>
    <string name="membersinvite">成员邀请</string>
    <string name="membersshare">成员分享</string>
    <string name="classlogo">班徽</string>
    <string name="inout">入退班申请</string>
    <string name="classname1">班级名称</string>
    <string name="classinvite">\t班级邀请</string>
    <string name="affirm">确认</string>
    <string name="close">取消</string>
    <string name="seach_text">搜索学校/地址</string>
    <string name="homeitemtest">报名|本周末来对话泸上双语教育的传奇人物，免费哒~</string>
    <string name="homeitemtestright">欢迎加入我们智慧家校班级！我们将使用智慧家校进行学校沟通，共育和教学！请及时查看智慧家校消息！收到通知请点击右下角“阅”及告知反馈哦！</string>
    <string name="addclassentry">\t\t加入班级后你才能收到老师的消息，快用老师给您的班级号加入班级吧！</string>
    <string name="classsitemtest">高飞爸爸，高飞2人提出申请</string>
    <string name="classname0">一年级八班</string>
    <string name="schoolname">河南省无人机驾驶员培训中心高一</string>
    <string name="location1">河南省郑州市花园路农科路安华大厦1506</string>
    <string name="date">11月17日 19:44</string>
    <string name="feedback">点击输入您对智慧家校的建议和意见，我们会认真听取您的每一条建议，让智慧家校更好的为您服务！\n如有任何使用问题欢迎拨打客服电话：\n400-123-1234</string>
    <string name="usernotifi">1、点击下载家长通知单并打印;\n2、在家长通知单上填写您的班级号;\n3、将通知单发给家长或手机拍照发送到班级家长群，提醒家长按照家长通知单上的流程加入班级</string>
    <string name="inviteteach">任课教师适用于搭班教师，任课教师可相互以对方\n的视角查看信息并可以删除普通成员！</string>
    <string name="invitesucc">我们将以短信通知他：您将他邀请成为了\n您班级的任课老师</string>
    <string name="synthesize">综合素质评价已纳入高考招生，素质养成必须从小抓起\n越早越好，让我们开始吧</string>
    <string name="publishcontent1">你可以上传孩子自己的事情自己做、做家务、志愿者的照片\n这些都属于品德发展的表现哦！</string>
    <string name="publishcontent2">你可以上传孩子折纸、积木、科学实验的照片这些都属于\n动手能力的表现哦！</string>
    <string name="publishcontent3">你可以上传孩子看书、作业、认真听讲的照片这些都属于\n热爱学习的表现哦！</string>
    <string name="publishcontent4">你可以上传孩子跳绳、跑步、打球的照片这些都属于\n体育活动的表现哦！</string>
    <string name="classmessentry">老师发来消息后要注意查看,看完以后\n千万不要忘记点阅哦~</string>
    <string name="classjurisdiction1">一般为班干部、家委会成员、协助老师发布消息</string>
    <string name="classjurisdiction">一般家长、学生，他们可以接收/参与活动</string>
    <string name="classjurisdiction2">适用于其他学科教师、搭班教师等，任课教师可以相互以\n对方的视角查看信息，权限基本等同于班级创建者</string>
    <string name="classjurisdiction3">转让您的班级创建者身份给到这位成员</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
