<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dlwx.wisdomschool.activitys.LoginInActivity">
    <include
        layout="@layout/toolbar"
        />
        <ImageView
            android:id="@+id/iv_pic"
            style="@style/ImageLogoSize"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_zhucetouxiang"
            android:layout_gravity="center_horizontal"
             />
        <TextView
            style="@style/TextSizebigBlack"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
             />
             <TextView
            style="@style/TextSizecontentBlack"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@mipmap/icon_yonghuming"
                 />
                <EditText
                    android:id="@+id/et_phone"
                    android:inputType="phone"
                    android:hint="@string/editphone"
                    style="@style/EditextStyle"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    />
        </LinearLayout>
        <View
            style="@style/BlueDiveStyle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/Imagesmillpic"
            android:src="@mipmap/icon_mima"
            />
        <EditText
            android:id="@+id/et_pwd"
            android:inputType="textPassword"
            android:hint="@string/editpwd"
            style="@style/EditextStyle"
            android:layout_marginLeft="10dp"
            android:background="@null"
            />
    </LinearLayout>
    <View
        style="@style/BlueDiveStyle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="25dp"
            android:layout_alignParentRight="true"
            >

            <TextView
                android:id="@+id/tv_regist"
               style="@style/TextSizecontentBlack"
                android:padding="5dp"
                android:text="@string/immregister"
                />
            <TextView
                android:id="@+id/tv_forpwd"
                style="@style/TextSizecontentBlack"
                android:padding="5dp"
                android:text="@string/forgitpwd"
                />
        </LinearLayout>

    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_login"
       style="@style/ButtonLoginStyles"
        android:text="登录"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
