<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dlwx.wisdomschool.activitys.Register1Activity">
    <include
        layout="@layout/toolbar"
        >
    </include>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/registerselete"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/registerplaceselete"
        />
        <RelativeLayout
            android:id="@+id/rl_teacher"
            style="@style/ButtonLoginStyles"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:background="@drawable/shape_regist_bluebg"
            android:layout_marginTop="50dp"
            >
            <ImageView
                style="@style/ImagehomeItempic"
              android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/icon_zhucetouxiang"
                />
                <TextView
                    android:text="@string/teacher"
                    style="@style/TextSizeSmallTitleBlack"
                        android:layout_centerInParent="true"
                     />
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_patriarch"
        style="@style/ButtonLoginStyles"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:background="@drawable/shape_register_greenbg"
        android:layout_marginTop="10dp"
        >
        <ImageView
            style="@style/ImagehomeItempic"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/icon_zhucetouxiang"
            />
        <TextView
            android:text="@string/patriarch"
            style="@style/TextSizeSmallTitleBlack"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

        <TextView
            android:id="@+id/tv_getteachcode"
            style="@style/TextSizeSmallTitleBlack"
            android:text="获取教师邀请码"
            android:visibility="gone"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />
</LinearLayout>
