<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.dlwx.wisdomschool.activitys.RegisterActivity">
    <include
        layout="@layout/toolbar"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_register_mess"
            >
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="40dp"
                android:orientation="horizontal"
                >
                <ImageView
                    style="@style/Imagesmillpic"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_shoujihao"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:id="@+id/et_phone"
                       style="@style/EditextStyle"
                        android:inputType="phone"
                        android:background="@null"
                        android:hint="@string/editphone"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        />
                        <TextView
                            android:id="@+id/tv_auth"
                            android:text="@string/getauth"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/blue"
                            />
                </LinearLayout>

            </LinearLayout>
            <View
                style="@style/BlueDiveStyle"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        style="@style/Imagesmillpic"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="22dp"
                        android:src="@mipmap/icon_yanzhengma" />
                </LinearLayout>
                <EditText
                    android:id="@+id/et_auth"
                    android:layout_marginLeft="20dp"
                    style="@style/EditextStyle"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:hint="@string/editauth"
                    android:layout_weight="6"
                    android:layout_height="match_parent"
                    android:background="@null" />

            </LinearLayout>
            <View
                style="@style/BlueDiveStyle"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >
                <ImageView
                    style="@style/Imagesmillpic"
                    android:layout_weight="1"
                    android:src="@mipmap/icon_mima"
                    android:layout_gravity="center_vertical"
                    />

                <EditText
                    android:id="@+id/et_pwd"
                    style="@style/EditextStyle"
                    android:layout_width="0dp"
                    android:inputType="textPassword"
                    android:hint="@string/editpwd"
                    android:layout_weight="6"
                    android:layout_height="match_parent"
                    android:background="@null" />
                    <ImageView
                        android:id="@+id/iv_pwd"

                        style="@style/Imagesmill2pic"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/icon_yanjing"
                        />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_register"
          style="@style/ButtonLoginStyles"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/register"
           />
</LinearLayout>
