<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/ll_left"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/ImagehomeItempic"
            android:src="@mipmap/icon_zhucetouxiang"
            />

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextSizecontentBlack"
            android:text="@string/app_name"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_black_line"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_margin="5dp"
                android:src="@mipmap/icon_homeitem"
                />
            <TextView
                style="@style/TextSizecontentBlack"
                android:padding="5dp"
                android:text="@string/homeitemtest"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/date"
                    android:id="@+id/tv_leftdate"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        style="@style/Imagesmill2pic"
                        android:src="@mipmap/icon_yanjing"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="6453258"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>