<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:background="@drawable/shape_class_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/iv_pic"
            style="@style/ImagehomeItempic"
            android:src="@mipmap/ss33"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_classname"
                    style="@style/TextSizecontentBlack"
                    android:text="092"
                    android:layout_weight="1"
                    />
                    <TextView
                        android:id="@+id/tv_cansenmess"
                        style="@style/TextSizecontentBlack"
                        android:text="可发消息"
                        android:visibility="gone"
                        android:textColor="@color/blue"
                        />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classnumber"
                    android:textSize="11sp"
                    />
                 <TextView
                     android:id="@+id/tv_classnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="380986"
                     android:layout_marginLeft="5dp"
                    android:textSize="11sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classmember"
                    android:layout_marginLeft="15dp"
                    android:textSize="11sp"
                    />
                 <TextView
                     android:id="@+id/tv_classmember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                     android:layout_marginLeft="5dp"
                    android:textSize="11sp"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_apply"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"

        android:background="#D73B48"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/TextSizecontentBlack"
            android:textColor="@color/white"
            android:text="高飞爸爸，高飞二人提出申请"
            android:layout_weight="1"

            android:textSize="11sp"
             />

            <ImageView
                style="@style/Imagesmill3pic"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_xjbjjiantou"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >
        <com.ruffian.library.RTextView
            android:id="@+id/tv_file"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon_height="15dp"
            app:icon_width="15dp"
            app:text_color_normal="@color/garytext"
            app:text_color_pressed="@color/garytext"
            app:text_color_unable="@color/garytext"
            android:state_focused="false"
            android:textColor="@drawable/selete_createclass_item_preate"
            app:icon_src_pressed="@mipmap/icon_cjbjwj"
            app:icon_src_normal="@mipmap/icon_cjbjwj"
            android:text="@string/classfile"
            android:textSize="11sp"
            />
         <com.ruffian.library.RTextView
             android:id="@+id/tv_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             app:icon_height="15dp"
             app:text_color_normal="@color/garytext"
             app:text_color_pressed="@color/garytext"
             app:text_color_unable="@color/garytext"
             android:clickable="true"
             app:icon_width="15dp"
             app:icon_src_pressed="@mipmap/icon_cjbjxx"
             app:icon_direction="left"
            app:icon_src_normal="@mipmap/icon_cjbjxx"
            android:text="@string/classmess"
            android:textSize="11sp"
            />
         <com.ruffian.library.RTextView
             android:id="@+id/tv_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                app:icon_height="15dp"
            app:icon_width="15dp"
             app:text_color_normal="@color/garytext"
             app:text_color_pressed="@color/garytext"
             app:text_color_unable="@color/garytext"
             android:clickable="true"

             android:textColor="@drawable/selete_createclass_item_preate"
             app:icon_src_pressed="@mipmap/icon_xjbjyaoqing"
            app:icon_src_normal="@mipmap/icon_xjbjyaoqing"
            android:text="@string/classinvite"
            android:textSize="11sp"
            />

    </LinearLayout>
</LinearLayout>