<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/ll_right"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_right"
                style="@style/TextSizecontentBlack"
                android:text="@string/banji"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="300dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_black_line"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_rightpic"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_margin="5dp"
                android:src="@mipmap/icon_homeitem"
                />
            <TextView
                style="@style/TextSizecontentBlack"
                android:padding="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/homeitemtestright"
                />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/date"
                    android:id="@+id/tv_rightdate"
                    android:layout_weight="1"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/iv_look"
                        style="@style/Imagesmill2pic"
                        android:src="@mipmap/icon_yanjingb"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0/0"
                        android:layout_marginLeft="5dp"
                        />
                    <ImageView
                        android:layout_marginLeft="5dp"
                        style="@style/Imagesmill2pic"
                        android:src="@mipmap/icon_syliaotian"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0/12"
                        android:layout_marginLeft="5dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_righttitpic"
            style="@style/ImagehomeItempic"
            android:src="@mipmap/icon_zhucetouxiang"
            />

    </android.support.v7.widget.CardView>
</LinearLayout>